      \code{"ts"} time series, proposed by Spencer Graves on R-devel.

      \item New \code{qr.influence()} function, a \dQuote{bare bones}
      interface to the \code{lm.influence()} leave-one-out diagnostics
      computations; wished for in \PR{18739}.

      \item New function \code{grepv()} identical to \code{grep()} except
      with the default \code{value = TRUE}. 
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item The minimum \command{autoconf} requirement for a maintainer
      build has been increased to \command{autoconf}\sspace{}2.72.

      \item Building the HTML (and Info) versions of the R manuals now
      requires \command{texi2any} from \I{Texinfo} 6.1 or later.
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item \code{is.R()} is defunct.  Environment variable
      \env{_R_DEPRECATED_IS_R_} no longer has any effect.

      \item Deprecated (for more than 9 years!) functions
      \code{linearizeMlist}, \code{listFromMlist}, and \code{showMlist} and
      the \code{"MethodsList"} class for S4 method handling were removed
      from package \pkg{methods}.
      Deprecated functions \code{balanceMethodsList}, \code{emptyMethodsList},
      \code{inheritedSubMethodLists}, \code{insertMethod},
      \code{insertMethodInEmptyList}, \code{makeMethodsList},
      \code{mergeMethods}, \code{MethodsList}, \code{MethodsListSelect}, and
      \code{SignatureMethod} were made defunct, as were the
      \code{"MethodsList"} branches of functions \code{assignMethodsMetaData},
      \code{finalDefaultMethod}, and \code{MethodAddCoerce}.
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item .
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item .
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item The non-API and hidden entry points \code{Rf_setIVector},
      \code{Rf_setRVector} and \code{Rf_setSVector} have been removed.
