@@ -17,7 +17,8 @@
 pdf(file = if(onefile) "Rplots.pdf" else "Rplot\%03d.pdf",
     width, height, onefile, family, title, fonts, version,
     paper, encoding, bg, fg, pointsize, pagecentre, colormodel,
-    useDingbats, useKerning, fillOddEven, compress)
+    useDingbats, useKerning, fillOddEven, compress,
+    timestamp, producer, author)
 }
 \arguments{
   \item{file}{a character string giving the file path.
@@ -33,7 +34,8 @@ pdf(file = if(onefile) "Rplots.pdf" else "Rplot\%03d.pdf",
     character string.  See the section \sQuote{Families}.  Defaults to
     \code{"Helvetica"}.}
   \item{title}{title string to embed as the \samp{/Title} field in the
-    file.  Defaults to \code{"R Graphics Output"}.}
+    document metadata.  Defaults to \code{"R Graphics Output"};
+    use an empty string (\code{""}) to omit the field.}
   \item{fonts}{a character vector specifying \R graphics font family
     names for additional fonts which will be included in the PDF file.
     Defaults to \code{NULL}.}
@@ -99,6 +101,12 @@ pdf(file = if(onefile) "Rplots.pdf" else "Rplot\%03d.pdf",
     \code{\link{polygon}} for details.  Defaults to \code{FALSE}.}
   \item{compress}{logical.  Should PDF streams be generated with \I{Flate}
     compression?  Defaults to \code{TRUE}.}
+  \item{timestamp}{logical.  If \code{FALSE}, omit the \samp{/CreationDate}
+    and \samp{/ModDate} metadata fields.  Defaults to \code{TRUE}.}
+  \item{producer}{logical.  If \code{FALSE}, omit the \samp{/Producer}
+    metadata field.  Defaults to \code{TRUE}.}
+  \item{author}{author string to embed as the \samp{/Author} field in the
+    document metadata.  Defaults to \code{""}, omitting the field.}
 }
 \details{
   All arguments except \code{file} default to values given by
