@@ -1,6 +1,6 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
- *  Copyright (C) 2004-2017   The R Core Team.
+ *  Copyright (C) 2004-2024  The R Core Team
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -92,7 +92,7 @@ static const R_ExternalMethodDef ExtEntries[] = {
     EXTDEF(PicTeX, 6),
     EXTDEF(PostScript, 19),
     EXTDEF(XFig, 14),
-    EXTDEF(PDF, 20),
+    EXTDEF(PDF, 23),
     EXTDEF(devCairo, 12),
     EXTDEF(devcap, 1),
     EXTDEF(devcapture, 1),
